<resources>
 <string name="callfilter_info">Show ratings for unknown numbers (using callfilter.app, cz.mts.callfilter)</string>
<string name="more_info">More info</string>
<string name="tmobile_theme">T-Mobile</string>
<string name="kaktus_theme">Kaktus</string>
<string name="use_custom_sim_color">Custom SIM color</string>
<string name="customization_sim1_color_label">SIM1 color</string>
<string name="customization_sim2_color_label">SIM2 color</string>
    <string name="use_dayofweek_in_time_format">View day of week</string>
    <string name="invalid_target_for_import">Select only one target (or none for creating custom)!</string>
    <string name="invalid_name_or_type">Invalid name or type!</string>
    <string name="view_all_call_history">View all history</string>
   <string name="search_all_fields">Search all fields</string>
    <string name="other">other</string>
    <string name="about">About</string>
    <string name="customization_navbar_color_label">NavBar color</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="back">Back</string>
    <plurals name="files_saved">
        <item quantity="one">File saved successfully</item>
        <item quantity="other">Files saved successfully</item>
    </plurals>
    <string name="invalid_file_format">Invalid file format</string>
    <string name="error">Error: %s</string>
    <string name="no_app_found">No valid app found</string>
    <string name="copy_number_to_clipboard">Copy number to clipboard</string>
    <string name="value_copied_to_clipboard_show">Value copied to clipboard:\n%s</string>
    <string name="unknown">Unknown</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="number">Number</string>
    <string name="no_contacts_found">No contacts found</string>
    <string name="zero">Zero</string>
    <string name="one">One</string>
    <string name="two">Two</string>
    <string name="three">Three</string>
    <string name="four">Four</string>
    <string name="five">Five</string>
    <string name="six">Six</string>
    <string name="seven">Seven</string>
    <string name="eight">Eight</string>
    <string name="nine">Nine</string>
    <string name="value">Value</string>
    <string name="create_new_contact">Create new contact</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="choose_contact">Choose contact</string>
    <string name="record_audio">Record audio</string>
    <string name="record_video">Record video</string>
    <string name="phone_storage">Phone storage</string>
    <string name="phone_storage_hidden">Phone storage (not visible by other apps)</string>
    <string name="home">Home</string>
    <string name="work">Work</string>
    <string name="mobile">Mobile</string>
    <string name="main_number">Main</string>
    <string name="work_fax">Work Fax</string>
    <string name="home_fax">Home Fax</string>
    <string name="pager">Pager</string>
    <string name="change_view_type">Change view type</string>
    <string name="grid">Grid</string>
    <string name="list">List</string>
    <string name="column_count">Column count</string>
    <plurals name="column_counts">
        <item quantity="one">%d column</item>
        <item quantity="other">%d columns</item>
    </plurals>
    <plurals name="row_counts">
        <item quantity="one">%d row</item>
        <item quantity="other">%d rows</item>
    </plurals>
    <string name="manage_blocked_numbers">⛔ Manage blocked numbers</string>
    <string name="not_blocking_anyone">You are not blocking anyone.</string>
    <string name="add_a_blocked_number">Add a blocked number</string>
    <string name="block_number">Block number</string>
    <string name="blocked_numbers">Blocked numbers</string>
    <string name="export_blocked_numbers">Export blocked numbers</string>
    <string name="import_blocked_numbers">Import blocked numbers</string>
    <string name="must_make_default_dialer">You have to make this app the default dialer app to make use of blocked numbers.</string>
    <string name="set_as_default">Set as default</string>
    <string name="block_confirmation">Are you sure you want to block \"%s\"?</string>
    <string name="block_unknown_calls">Block calls from numbers not in contacts</string>
    <string name="block_hidden_calls">Block calls from hidden numbers</string>
    <string name="block_unknown_messages">Block messages from numbers not in contacts</string>
    <string name="block_hidden_messages">Block messages from hidden numbers</string>
    <string name="add_blocked_number_helper_text">Enter a number or a pattern (e.g. *12345*, +1*8888) to block all calls and messages from numbers matching the pattern.</string>
    <string name="must_make_default_caller_id_app">Can\'t block unknown numbers without caller ID permission.</string>
    <string name="block_contact">Block contact</string>
    <string name="block_contact_success">Contact blocked</string>
    <string name="block_contact_fail">Contact could not be blocked</string>
    <string name="unblock_contact">Unblock contact</string>
    <string name="unblock_contact_success">Contact unblocked</string>
    <string name="unblock_contact_fail">Contact could not be unblocked</string>
    <string name="favorites">Favorites</string>
    <string name="search">Search</string>
    <string name="search_contacts">Search contacts</string>
    <string name="filter">Contact\'s sources</string>
    <string name="no_items_found">No items found.</string>
    <string name="allow_notifications_incoming_calls">You must allow the app displaying notifications, else it cannot show incoming calls.</string>
    <string name="allow_full_screen_notifications_incoming_calls">You must allow the app displaying full screen notifications, else you may miss some incoming calls.</string>
    <string name="grant_permission">Grant Permission</string>
    <string name="permission_required">Permission Required</string>
    <string name="filename_cannot_be_empty">Filename cannot be empty</string>
    <string name="filename_invalid_characters">Filename contains invalid characters</string>
    <string name="prepend_filenames">Add text before filenames</string>
    <string name="append_filenames">Add text after filenames</string>
    <string name="simple_renaming">Simple renaming</string>
    <string name="pattern_renaming">Pattern</string>
    <string name="string_to_add">Text to add</string>
    <string name="rename_date_time_pattern">%Y - year\n%M - month\n%D - day\n%h - hour\n%m - minute\n%s - second\n%i - number increasing from 1</string>
    <string name="filename_without_txt">Filename (without .txt)</string>
    <string name="filename_without_json">Filename without extension</string>
    <string name="copy">Copy</string>
    <string name="please_select_destination">Please select a destination</string>
    <string name="could_not_create_folder">Could not create folder %s</string>
    <string name="could_not_create_file">Could not create file %s</string>
    <string name="system_service_disabled">System service for selecting files and folders is unavailable</string>
    <string name="folder">Folder</string>
    <string name="create_new_folder">Create new folder</string>
    <string name="name_taken">A file or folder with that name already exists</string>
    <string name="invalid_name">The name contains invalid characters</string>
    <string name="empty_name">Please enter a name</string>
    <string name="unknown_error_occurred">An unknown error occurred</string>
    <string name="file_already_exists">File \"%s\" already exists</string>
    <string name="file_already_exists_overwrite">File \"%s\" already exists. Overwrite?</string>
    <string name="folder_already_exists">Folder \"%s\" already exists</string>
    <string name="merge">Merge</string>
    <string name="keep_both">Keep both</string>
    <string name="overwrite">Overwrite</string>
    <string name="skip">Skip</string>
    <string name="apply_to_all">Apply to all</string>
    <string name="system_folder_restriction">The system does not allow the operation in this folder, please pick another one</string>
    <string name="select_folder">Select a folder</string>
    <string name="select_file">Select a file</string>
    <string name="confirm_storage_access_title">Confirm external storage access</string>
    <string name="confirm_folder_access_title">Confirm folder access</string>
    <string name="confirm_storage_access_text">Please choose the top folder of the SD card on the next screen, to grant write access</string>
    <string name="confirm_storage_access_text_sd">If you don\'t see the SD card, try this</string>
    <string name="confirm_storage_access_android_text_specific">Please allow access to \'&lt;b&gt;%s&lt;/b&gt;\' on the next screen by pressing \'&lt;b&gt;Use this folder&lt;/b&gt;\' at the bottom.</string>
    <string name="confirm_create_doc_for_new_folder_text">Please press \'&lt;b&gt;Save&lt;/b&gt;\' at the bottom of the next screen to create the new folder.</string>
    <string name="loading">Loading…</string>
    <plurals name="items">
        <item quantity="one">%d item</item>
        <item quantity="other">%d items</item>
    </plurals>
    <plurals name="delete_items">
        <item quantity="one">%d item</item>
        <item quantity="other">%d items</item>
    </plurals>
    <plurals name="deleting_items">
        <item quantity="one">Deleting %d item</item>
        <item quantity="other">Deleting %d items</item>
    </plurals>
    <plurals name="delete_contacts">
        <item quantity="one">%d contact</item>
        <item quantity="other">%d contacts</item>
    </plurals>
    <string name="select_storage">Select storage</string>
    <string name="internal">Internal</string>
    <string name="sd_card">SD Card</string>
    <string name="root">Root</string>
    <string name="wrong_root_selected">Wrong folder selected, please select the main folder of your SD card</string>
    <string name="sd_card_usb_same">SD card and USB device paths cannot be the same</string>
    <string name="wrong_folder_selected">Wrong folder selected, please select path \'%s\'</string>
    <string name="path">Path</string>
    <string name="background_color">Background color</string>
    <string name="text_color">Text color</string>
    <string name="primary_color">Primary color</string>
    <string name="accent_color_white">Accent color of white theme</string>
    <string name="accent_color_black_and_white">Accent color of Black &amp; White theme</string>
    <string name="app_icon_color">App icon color</string>
    <string name="default_color">Default</string>
    <string name="theme">Theme</string>
    <string name="changing_color_description">Only the app icon color can be changed here. Any other color change will switch the theme to Custom.</string>
    <string name="save">Save</string>
    <string name="discard">Discard</string>
    <string name="cannot_be_undone">This action cannot be undone.</string>
    <string name="save_before_closing">You have unsaved changes. Save before exit?</string>
    <string name="delete">Delete</string>
    <string name="select_all">Select all</string>
    <string name="create_shortcut">Pin to mainscreen</string>
    <string name="add_number_to_contact">Add number to contact</string>
    <string name="view_contact_details">View contact details</string>
    <string name="call_from_sim_1">Call from SIM 1</string>
    <string name="call_from_sim_2">Call from SIM 2</string>
    <string name="send_sms">Send SMS</string>
    <string name="call">Call</string>
    <string name="call_history_tab">Call History</string>
</resources>