<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="AppCompatResource,AlwaysShowAction">
    <item
        android:id="@+id/cab_delete"
        android:icon="@drawable/ic_delete_vector"
        android:title="@string/delete"
        app:showAsAction="always" />
    <item
        android:id="@+id/cab_view_details"
        android:icon="@drawable/ic_view_contact_details_vector"
        android:title="@string/view_contact_details"
        app:showAsAction="always" />
    <item
        android:id="@+id/cab_send_sms"
        android:icon="@drawable/ic_sms_vector"
        android:title="@string/send_sms"
        app:showAsAction="always" />
 <item
        android:id="@+id/cab_view_recents"
        android:title="@string/call_history_tab"
        app:showAsAction="never" />
    <item
        android:id="@+id/cab_call_sim_1"
        android:icon="@drawable/ic_phone_one_vector"
        android:title="@string/call_from_sim_1"
        app:showAsAction="never" />
    <item
        android:id="@+id/cab_call_sim_2"
        android:icon="@drawable/ic_phone_two_vector"
        android:title="@string/call_from_sim_2"
        app:showAsAction="never" />

    <item
        android:id="@+id/cab_create_shortcut"
        android:title="@string/create_shortcut"
        app:showAsAction="never" />
    <item
        android:id="@+id/cab_remove_default_sim"
        android:title="@string/unset_default_sim"
        app:showAsAction="never" />
    <item
        android:id="@+id/cab_block_unblock_contact"
        android:icon="@drawable/ic_minus_circle_vector"
        android:title="@string/block_contact"
        app:showAsAction="never" />

    <item
        android:id="@+id/cab_copy_number"
        android:icon="@drawable/ic_clipboard2_vector"
        android:title="@string/copy"
        app:showAsAction="never" />


    <item
        android:id="@+id/cab_select_all"
        android:icon="@drawable/ic_select_all_filled_vector"
        android:title="@string/select_all"
        app:showAsAction="ifRoom" />
</menu>
